--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
     "@fastify/formbody": "^7.4.0",
     "@types/node": "^18.11.13",
     "dotenv": "^16.0.3",
-    "fastify": "^4.10.2"
+    "fastify": "^4.10.2",
+    "lodash-es": "^4.17.21"
   },
   "devDependencies": {
     "@tsconfig/node18": "^1.0.1",
     "@types/lodash-es": "^4.17.6",
-    "lodash-es": "^4.17.21",
     "tsx": "^3.12.1",
     "typescript": "^4.9.4"
   },
