--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@fastify/basic-auth": "^5.0.0",
     "@fastify/cors": "^8.2.0",
     "@fastify/formbody": "^7.4.0",
+    "@fastify/static": "^6.6.0",
     "@types/node": "^18.11.13",
     "dotenv": "^16.0.3",
     "fastify": "^4.10.2",
