--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "dotenv": "^16.0.3",
     "fastify": "^4.10.2",
     "lodash-es": "^4.17.21",
-    "tagged-hypertext": "^1.0.1"
+    "pino-pretty": "^9.1.1",
+    "tagged-hypertext": "^1.0.1",
+    "vite": "^4.0.0"
   },
   "devDependencies": {
     "@tsconfig/node18": "^1.0.1",
@@ -18,6 +20,7 @@
     "typescript": "^4.9.4"
   },
   "scripts": {
-    "dev": "tsx --watch src/index.ts"
+    "dev": "tsx src/main.ts",
+    "start": "tsx src/main.ts"
   }
 }
