--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "typescript": "^4.9.4"
   },
   "scripts": {
-    "dev": "tsx src/main.ts",
-    "start": "tsx src/main.ts"
+    "dev": "tsx --watch src/main.ts",
+    "start": "tsx --watch src/main.ts"
   }
 }
