--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "@thai/html": "npm:@jsr/thai__html@^0.0.4",
     "elysia": "^1.0.10",
-    "lodash-es": "^4.17.21"
+    "lodash-es": "^4.17.21",
+    "ofetch": "^1.3.4"
   },
   "devDependencies": {
     "@cloudflare/vitest-pool-workers": "^0.1.19",
